# migratio

./: .gitignore  Cargo.toml  DEVELOPMENT.md  LICENSE  MYSQL.md  README.md  justfile
.zed/: settings.json
cargo-migratio/: Cargo.toml
cargo-migratio/src/: main.rs
dev/: publish.sh  verify-mysql-dep-versions.sh  verify-sqlite-dep-versions.sh  verify.sh
examples/: mysql_basic.rs
examples/mysql-app/: Cargo.toml
examples/mysql-app/src/: lib.rs  migrations.rs
examples/postgres-app/: Cargo.toml
examples/postgres-app/src/: lib.rs  migrations.rs
examples/sqlite-app/: Cargo.toml
examples/sqlite-app/src/: lib.rs  migrations.rs
migratio/: Cargo.toml
migratio-cli/: Cargo.toml
migratio-cli/src/: lib.rs
migratio/src/: core.rs  error.rs  lib.rs  macros.rs  mysql.rs  postgres.rs  sqlite.rs  test_postgres.rs  testing.rs
migratio/src/testing/: mysql.rs  postgres.rs  sqlite.rs
src/: core.rs  error.rs  lib.rs  migrator.rs  mysql.rs  mysql_migrator.rs  sqlite.rs  test_mysql.rs  testing.rs
src/testing/: mysql.rs  sqlite.rs
