[package]
name = "migratio"
version = "0.2.0"
edition = "2021"
description = "Write expressive database migrations in Rust."
license = "MIT"   # SPDX ID(s)
readme = "README.md"
repository = "https://github.com/samgqroberts/migratio"
homepage = "https://github.com/samgqroberts/migratio"
documentation = "https://docs.rs/migratio"
keywords = ["database", "migration", "sqlite", "mysql"]
categories = ["database", "development-tools"]
authors = ["Sam Roberts <samgqroberts@gmail.com>"]
include = ["/src", "LICENSE"]

[dependencies]
chrono = "0.4.42"
rusqlite = { version = ">=0.30, <=0.37", default-features = false, optional = true }
mysql = { version = ">=24.0, <=26.0", optional = true }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
sha2 = "0.10"
strum = "0.27.2"
strum_macros = "0.27.2"
thiserror = "2.0.17"
tracing = { version = "0.1", optional = true }

[dev-dependencies]
ctor = "0.6.0"
tempfile = "3.23.0"
testcontainers = { version = "0.25.0", features = ["blocking"] }
tokio = { version = "1.48.0", features = ["rt-multi-thread", "macros"] }
tracing-subscriber = "0.3"
tracing-test = "0.2"
uuid = { version = "1.18.1", features = ["v4"] }

[features]
default = []

## Enables SQLite migration support
sqlite = ["dep:rusqlite"]
## Enables MySQL migration support
mysql = ["dep:mysql"]
## Enables tracing calls from within the library
tracing = ["dep:tracing"]
## Provides testing utilities
testing = ["sqlite"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
