[workspace]
resolver = "2"
members = [
    "migratio",
    "migratio-cli",
    "cargo-migratio",
    "examples/sqlite-app",
    "examples/mysql-app",
]

[workspace.package]
version = "0.3.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/samgqroberts/migratio"
homepage = "https://github.com/samgqroberts/migratio"
