[package]
name = "cargo-migratio"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Cargo subcommand for migratio database migrations"
keywords = ["database", "migration", "cargo", "cli"]
categories = ["database", "command-line-utilities", "development-tools::cargo-plugins"]

[[bin]]
name = "cargo-migratio"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
cargo_metadata = "0.18"
toml = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
