[package]
name = "migratio-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "CLI support library for migratio database migrations"
keywords = ["database", "migration", "cli"]
categories = ["database", "command-line-utilities"]

[features]
default = []
sqlite = ["migratio/sqlite", "dep:rusqlite"]
mysql = ["migratio/mysql", "dep:mysql"]

[dependencies]
migratio = { version = "0.3.0", path = "../migratio", default-features = false }
clap = { version = "4", features = ["derive"] }
rusqlite = { version = ">=0.30, <=0.37", default-features = false, optional = true }
mysql = { version = ">=24.0, <=26.0", optional = true }
