[package]
name = "mysql-app"
version = "0.1.0"
edition.workspace = true
publish = false

[dependencies]
# migratio re-exports mysql types via migratio::mysql module
migratio = { path = "../../migratio", default-features = false, features = ["mysql"] }

[package.metadata.migratio]
migrator_fn = "mysql_app::migrations::get_migrator"
database = "mysql"
database_url_env = "DATABASE_URL"
