[package]
name = "postgres-app"
version = "0.1.0"
edition.workspace = true
publish = false

[dependencies]
# migratio re-exports postgres types via migratio::postgres module
migratio = { path = "../../migratio", default-features = false, features = ["postgres"] }

[package.metadata.migratio]
migrator_fn = "postgres_app::migrations::get_migrator"
database = "postgres"
database_url_env = "DATABASE_URL"
