[package]
name = "sqlite-app"
version = "0.1.0"
edition.workspace = true
publish = false

[dependencies]
migratio = { path = "../../migratio", default-features = false, features = ["sqlite"] }
rusqlite = "0.32"

[package.metadata.migratio]
migrator_fn = "sqlite_app::migrations::get_migrator"
database = "sqlite"
database_url_env = "DATABASE_URL"
